--- a/Qjc.AbpDemo.DbMigrator/appsettings.json
+++ b/Qjc.AbpDemo.DbMigrator/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "SqlServer": "Server=(LocalDb)\\MSSQLLocalDB;Database=AbpDemo;Trusted_Connection=True;TrustServerCertificate=true",
-    "Dm": "Server=localhost;Uid=ABP_DEMO;Pwd=eMarine123"
+    "Dm": "Server=localhost;Uid=ABP_DEMO;Pwd=eMarine123",
+    "Oracle": "Data Source=localhost/orcl:1521;User ID=ABP_DEMO;Password=ABP_DEMO"
   },
-  "DataBaseType": "Dm"
+  "DataBaseType": "SqlServer"
 }
