--- a/Qjc.AbpDemo.Application/Qjc.AbpDemo.Application.csproj
+++ b/Qjc.AbpDemo.Application/Qjc.AbpDemo.Application.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="9.2.3" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="9.2.3" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Oracle" Version="9.2.3" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="9.2.3" />
   </ItemGroup>
 
